# ucentral-server

./: .gitignore  CMakeLists.txt  disconnect.uc  dispatch.uc  init.uc  jsonrpc.c  main.c  ubus.c  ubus.uc  ucentral.h  ucode.c  websocket.c
